--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,27 @@ code {
 }
 .mytodo{
   border:1px solid;
-  background-color: red;
   margin:7px;
+}
+.myli{
+  border:1px solid;
+  margin:9px;
+  padding-bottom: 4px;
+  background-color: blue;
+  margin-left: 10px;
+}
+.coffee{
+  border:1px solid;
+  margin:9px;
+  padding-bottom: 4px;
+  background-color: red;
+  margin-left: 10px;
+}
+.tea{
+  border:1px solid;
+  margin:9px;
+  padding-bottom: 4px;
+  background-color: green;
+  margin-left: 10px;
 }
 
